# LearnVulkan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build_hint.txt  run_cmake.bat
cmake/: FindMETIS.cmake
res/: CMakeLists.txt
res/OITshaders/: distort.comp  distort.frag  distort.vert  oit.comp  oit.frag
res/shaders/: PNanoVDB.h  distort.frag  distort.vert  flat.frag  flat.mesh  flat_task.frag  flat_task.mesh  flat_task.task  fresnel.glsl  gaussian.comp  gaussian2.comp  gaussian_pass.comp  gbuffer.frag  gbuffer.vert  light.frag  mesh.frag  mesh.mesh  mesh.task  microfacet.glsl  nano_ref.glsl  nanovdb_adaptor.glsl  oit.comp  oit.frag  oit.vert  particle.comp  particle.frag  particle.vert  pass_through.frag  pbr_common.glsl  pbr_fresnel.glsl  pbr_microfacet.glsl  pbr_volume_scattering.glsl  quad.frag  quad.vert  room.frag  room.vert  rq.frag  rq.vert  rt.rchit  rt.rgen  (+29 more)
src/: CMakeLists.txt  acceleration_structure.cpp  buffer.cpp  buffer.h  camera.cpp  camera.h  commandbuffer.cpp  commandbuffer.h  common.h  component.h  config.h  device.cpp  device.h  drawable.cpp  drawable.h  gaussian_blur.h  geometry.h  glTF_loader.cpp  glTF_loader.h  help.h  image.cpp  image.h  material.cpp  material.h  memory_allocator.cpp  memory_allocator.h  meshlet_app.cpp  meshlet_app.h  pipeline.cpp  pipeline.h  pipeline_input.cpp  pipeline_input.h  pipeline_io.cpp  pipeline_io.h  ray_query_app.cpp  ray_query_app.h  ray_tracing.cpp  ray_tracing.h  ray_tracing_app.cpp  ray_tracing_app.h  (+19 more)
src/application/: gui_pass.cpp  gui_pass.h  meshlet_app.cpp  meshlet_app.h  ray_query_app.h  (+11 more)
(+45 files in other folders)
